# OpenAutosar

./: .clang-format  .gitignore  README.md  SConstruct  TestPlatform_UintTest_QEMU_Test.json  misra.json  release_libs.bat  release_libs.sh  repo_metasar.bat  repo_metasar.sh  requirements.txt  run_gtest.bat  run_gtest.sh  run_integrationTest.bat  run_integrationTest.sh
.github/workflows/: build-validation.yml  integration-qemu.yml  parasoft-analysis.yml
ASW/ASW_NM/inc/: ASW_NM.h
ASW/VehicleControl/: SConscript
ASW_Libs/: README.md
ASW_Libs/Demo_Tc387/: README.md
ASW_Libs/inc/: Rte_Type.h
ASWs/VehicleControl/: SConscript
BSW/Com/: SConscript
BSW/Os/: SConscript
BSW/inc/: CodeGen_Version.h
BSW_Libs/: README.md
BSW_Libs/Demo_Tc387/: README.md
CDD/CddMotor/: SConscript
CDD_Libs/: README.md
CDD_Libs/Demo_Tc387/: README.md
CDDs/CddPwm/: SConscript
Components/Common/: SConscript
MCAL/inc/: Std_Types.h
MCAL_Libs/: README.md
Projects/Demo_Tc387/: 01_env_check.bat  02_list.bat  03_build_host.bat  04_run_gtest.bat  05_run_check.bat  06_gen_doc.bat  07_check_dashboard.bat  08_gen_bsw_etas.bat  09_gen_bsw_vector.bat  SConscript  SConstruct  build.yaml  misra.json  module_config.py  oa.bat  parasoft.json
Projects/Demo_Tc387/Test/ut/: CMakeLists.txt
Projects/Tc397_Hightec/: SConscript  build.yaml
Test/: README.md
Test/Projects/: run_qemu.py
Test/ut/: CMakeLists.txt
Tools/: ENVIRONMENT.md  README.md  activate_offline.bat  fetch_tools.py  offline_download.py  requirements.txt  setup_env.py
Tools/A2L/: merge_a2l.py
Tools/Compiler/: setup_env.bat  setup_env.sh
Tools/Doxygen/: Doxyfile.in
Tools/Git/: README.md  init_subrepos.bat  repo.bat  repo_map.txt
docs/: build_and_security.html  index.html  repo_structure.html
manifests/: README.md  default.xml  manifest-asw.xml  manifest-integration.xml
(+1776 files in other folders)
